Fix table text overflow in base styles

--- a/api/src/reportcreator_api/tasks/rendering/global_assets/base-text.scss
+++ b/api/src/reportcreator_api/tasks/rendering/global_assets/base-text.scss
@@ -11,6 +11,7 @@ The reason why the file extension is .scss is that the SCSS-preprocessor inlines
 table {
   width: 100%;
   caption-side: bottom;
+  overflow-wrap: anywhere;
 }
 table, th, td {
   border: 1px solid black;
